<resources>
    <string name="app_name">Bitcoin ticker</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="unit_hint_text">Units</string>
    <string name="market">Market</string>
    <string name="units">Units</string>
    <string name="total_value">Total value</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="stock_price_text">%.2f</string>
    <string name="amount">Amount</string>
    <string name="formatted_amount_header">Amount (%s)</string>

</resources>
